--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_OAUTH_URL='https://github.com/login/oauth/authorize'
-VITE_OAUTH_TOKEN=""
+VITE_OAUTH_URL=https://github.com/login/oauth/authorize
+VITE_OAUTH_TOKEN=
